# SoulBook

./: .env  .gitignore  DONATE.md  LICENSE  Pipfile  README.md  REFACTOR_PLAN.md  alembic.ini  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  requirements2.txt  run_docker.sh  start.sh  stop.sh
alembic/: env.py
docker/: Dockerfile-alpine  Dockerfile-slim  docker-compose.yml
examples/: latest_chapter.py  user_recommend.py  user_tag.py
examples/novels/: baidu_novels.py  bing_novels.py  duck_go_novels.py  novels_schedule.py  parse.py  so_novels.py
scripts/: init_db.py  migrate.py
soulbook/: main.py  server.py
soulbook-old/: __init__.py  scheduled_task.py  start.sh
soulbook-old/config/: __init__.py  dev_config.py  rules.py
soulbook-old/fetcher/: decorators.py  function.py  novels_schedule.py  novels_tools.py
soulbook-old/spiders/: qidian_all_novels.py  qidian_ranking.py  spider_tools.py  zh_ranking.py  zongheng_all_novels.py
soulbook/api/: deps.py
soulbook/config/: __init__.py  config.py  dev_config.py  gunicorn.py  rules.py
soulbook/crawlers/: base.py  middleware.py  qidian.py  zongheng.py
soulbook/database/: session.py
soulbook/fetcher/: cache.py  decorators.py  extract_novels.py
soulbook/models/: base.py  novel.py
soulbook/schemas/: novel.py  user.py
soulbook/services/: search_service.py  user_service.py
soulbook/spiders/: heiyan_novel_info.py  middlewares.py  qidian_novel_info.py  spider_console.py  zongheng_novel_info.py
soulbook/utils/: security.py
soulbook/views/: md_blueprint.py  (+5 more)
tests/: test_heiyan_novel_info.py
(+54 files in other folders)
